# trivia

./: README.md  docker-compose.yml
backend/: README.md  app.py  backend.Dockerfile  config.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_flaskr.py
backend/flaskr/: __init__.py  models.py
frontend/: Dockerfile  README.md  frontend.Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/components/: FormView.js  Header.js  Question.js  QuestionView.js  QuizView.js  Search.js
frontend/src/stylesheets/: App.css  FormView.css  Question.css  QuizView.css
